# plan-to-git

./: .gitignore  .gitkeep  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
changelog.d/: 20260530_104500_plan_to_git_mvp.md  20260531_000000_test_localized_plan_capture.md  20260603_195500_guard_plan_sync_closed_prs.md  20260610_000000_guard_plan_sync_draft_prs.md  20260611_000000_claude_code_plan_capture.md  20260617_codex_update_plan_import.md  20260617_explicit_repo_context.md  20260617_sync_draft_prs.md
examples/: basic_usage.rs
src/: capture.rs  claude_history.rs  codex_history.rs  error.rs  git.rs  github.rs  history.rs  lib.rs  main.rs  normalize.rs  pr_body.rs  redact.rs  render.rs  state_path.rs  store.rs
tests/integration/: cli.rs  mod.rs  support.rs
tests/unit/: mod.rs  plan_capture.rs
