[package]
name = "plan-to-git"
version = "0.19.0"
edition = "2021"
description = "Capture agent plans and sync them to GitHub pull requests"
readme = "README.md"
license = "Unlicense"
keywords = ["agents", "github", "pull-request", "codex"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/ProverCoderAI/plan-to-git"
documentation = "https://github.com/ProverCoderAI/plan-to-git"
rust-version = "1.85"

# Narrow allowlist of files shipped in the published `.crate` archive.
# Keeping this list tight prevents docs, case studies, generated CI artifacts,
# changelog fragments, and experiments from silently inflating the release
# archive past the crates.io 10 MiB upload limit. See issue #58.
include = [
    "src/**/*.rs",
    "examples/**/*.rs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[lib]
name = "plan_to_git"
path = "src/lib.rs"

[[bin]]
name = "plan-to-git"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
walkdir = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
